extra margin top for images, excised redundant table tags, sneaky header fixed

--- a/style.scss
+++ b/style.scss
@@ -361,6 +361,10 @@ figure {
     }
 }
 
+picture {
+    margin-top: .25rem;
+}
+
 progress {
     width: 100%;
     height: 5rem;
